src/test/deca/context/valid/oracle/use_defined_variable_in_two_if.deca
{
    int i = 1;
    if(true){
        if(true){
           println(i);
        }
    }
}