src/test/deca/context/invalid/oracle/condition_int_assign.deca
{
    if(i = 1 < 2){
        print();
    }
}